Configure maven publishing to archive executable executable jar too