@@ -45,70 +45,11 @@ dependencies {
 
 // Implements https://github.com/brianm/really-executable-jars-maven-plugin maven plugin behaviour.
 // To check details how it works, see https://skife.org/java/unix/2011/06/20/really_executable_jars.html.
-val shadowJarExecutable by tasks.registering(DefaultTask::class) {
-    description = "Creates self-executable file, that runs generated shadow jar"
-    group = "Distribution"
-
+val shadowJarExecutable by tasks.registering(ShadowJarExecutableTask::class) {
     dependsOn(tasks.shadowJar)
-
-    val isReleaseBuild = !version.toString().endsWith("SNAPSHOT")
-
-    // Find the "ktlint-cli-<version>-all.jar" file
-    val ktlintCliAllJarFile = tasks.shadowJar.get().outputs.files.singleFile
-    logger.lifecycle("ktlint-cli: Base jar to build self-executable file: ${ktlintCliAllJarFile.absolutePath}")
-    inputs.files(ktlintCliAllJarFile)
-
-    val windowsBatchFileInputPath = layout.projectDirectory.file("src/main/scripts/ktlint.bat").asFile
-    inputs.files(windowsBatchFileInputPath)
-    // Output is the self-executable file
-    val outputDirectoryPath = layout.buildDirectory.dir("run").get().asFile
-    val selfExecutableKtlintOutputPath = outputDirectoryPath.resolve("ktlint")
-    val selfExecutableKtlintSignatureOutputPath = outputDirectoryPath.resolve("ktlint.asc")
-    val windowsBatchFileOutputPath = outputDirectoryPath.resolve("ktlint.bat")
-    outputs.files(selfExecutableKtlintOutputPath)
-    if (isReleaseBuild) {
-        // And for releases also the signature file and a batch file for Windows OS
-        outputs.files(selfExecutableKtlintSignatureOutputPath)
-        outputs.files(windowsBatchFileOutputPath)
-    }
-
-    logger.lifecycle("Creating the signature file: $selfExecutableKtlintSignatureOutputPath")
-    signing.sign(selfExecutableKtlintSignatureOutputPath)
-
-    doLast {
-        selfExecutableKtlintOutputPath.apply {
-            logger.lifecycle("Creating the self-executable file: $selfExecutableKtlintOutputPath")
-
-            // writeText effective replaces the entire content if the file already exists. If appendText is used, the file keeps on growing
-            // with each build if the clean target is not used.
-            writeText(
-                """
-                #!/bin/sh
-
-                # From this SO answer: https://stackoverflow.com/a/56243046
-
-                # First we get the major Java version as an integer, e.g. 8, 11, 16. It has special handling for the leading 1 of older java
-                # versions, e.g. 1.8 = Java 8
-                JV=$(java -version 2>&1 | sed -E -n 's/.* version "([^.-]*).*".*/\1/p')
-
-                # Add --add-opens for java version 16 and above
-                X=$( [ "${"$"}JV" -ge "16" ] && echo "--add-opens java.base/java.lang=ALL-UNNAMED" || echo "")
-
-                exec java ${"$"}X -Xmx512m -jar "$0" "$@"
-
-                """.trimIndent(),
-            )
-            // Add the jar
-            appendBytes(ktlintCliAllJarFile.readBytes())
-
-            setExecutable(true, false)
-        }
-        if (isReleaseBuild) {
-            logger.lifecycle("Creating the batch file for Windows OS: $windowsBatchFileOutputPath")
-            windowsBatchFileOutputPath.writeText(windowsBatchFileInputPath.readText())
-        }
-        logger.lifecycle("Finished creating output files ktlint-cli")
-    }
+    selfExecutable.fileProvider(tasks.shadowJar.map { it.outputs.files.singleFile })
+    windowsBatchFileInputPath.value(layout.projectDirectory.file("src/main/scripts/ktlint.bat"))
+    signing.sign(selfExecutableKtlintSignatureOutputPath.get())
 }
 
 tasks.register<Checksum>("shadowJarExecutableChecksum") {
@@ -119,39 +60,39 @@ tasks.register<Checksum>("shadowJarExecutableChecksum") {
 
     inputFiles.setFrom(shadowJarExecutable.map { it.outputs.files })
     // put the checksums in the same folder with the executable itself
-    outputDirectory.fileProvider(
-        shadowJarExecutable
-            .map {
-                it
-                    .outputs
-                    .files
-                    .files
-                    .first()
-                    .parentFile
-            },
-    )
+    outputDirectory.fileProvider(shadowJarExecutable.flatMap { it.selfExecutable }.map { it.asFile.parentFile })
     checksumAlgorithm = Checksum.Algorithm.MD5
+}
+
+publishing {
+    // option 1: append to existing publication with classifier
+    publications.named<MavenPublication>("maven") {
+        artifact(tasks.named<ShadowJarExecutableTask>("shadowJarExecutable").map { it.selfExecutable }) {
+            classifier = "exec"
+        }
+    }
+
+    // option 2: create separate publication
+    publications.register<MavenPublication>("fatJar") {
+        artifactId = "ktlint-cli-fatjar"
+
+        artifact(tasks.named("sourcesJar"))
+        artifact(tasks.named("javadocJar"))
+        artifact(tasks.named<ShadowJarExecutableTask>("shadowJarExecutable").map { it.selfExecutable })
+        signing.sign(this)
+    }
 }
 
 tasks.withType<Test>().configureEach {
     dependsOn(shadowJarExecutable)
 
     // TODO: Use providers directly after https://github.com/gradle/gradle/issues/12247 is fixed.
-    val executableFilePath =
-        providers
-            .provider {
-                shadowJarExecutable
-                    .get()
-                    .outputs
-                    .files
-                    .first { it.name == "ktlint" }
-                    .absolutePath
-            }.get()
+    val executableFilePath = shadowJarExecutable.flatMap { it.selfExecutableKtlintOutputPath }.get()
     val ktlintVersion = providers.provider { version }.get()
     doFirst {
         systemProperty(
             "ktlint-cli",
-            executableFilePath,
+            executableFilePath.absolutePath,
         )
         systemProperty("ktlint-version", ktlintVersion)
     }
